# becomeasystemsengineer

./: .gitignore  COURSE.md  MISSION.md  NOTES.md  PAGES.md  READINESS-MATRIX.md  README.md  RESEARCH.md  RESOURCES.md  SETUP.md  curriculum-manifest.json  index.html  netforge.code-workspace
.github/workflows/: matching.yml  pages.yml
assets/: capstone.js  course.css  course.js
capstone/: CMakeLists.txt  PROTOCOL.md  README.md
capstone/matching/: CMakeLists.txt  README.md  index.html
capstone/matching/apps/: bench_main.cpp  matching_main.cpp  mock_generate_main.cpp
capstone/matching/include/matching/: engine.hpp  ingress_queue.hpp  kafka_edge.hpp  mock_data.hpp  order.hpp  order_book.hpp  redis_edge.hpp
capstone/matching/solution-reference/: CMakeLists.txt  README.md
capstone/matching/solution-reference/apps/: bench_main.cpp  matching_main.cpp  mock_generate_main.cpp
capstone/matching/solution-reference/include/matching/: engine.hpp  ingress_queue.hpp  kafka_edge.hpp  mock_data.hpp  order.hpp  order_book.hpp  redis_edge.hpp
capstone/matching/solution-reference/src/: engine.cpp  kafka_edge.cpp  mock_data.cpp  order_book.cpp  redis_edge.cpp
capstone/matching/solution-reference/tests/: matching_tests.cpp
capstone/matching/src/: engine.cpp  kafka_edge.cpp  mock_data.cpp  order_book.cpp  redis_edge.cpp
capstone/matching/steps/: 01-contract.html  02-price-levels.html  03-price-time.html  04-lifecycle.html  05-engine.html  06-replay.html  07-lock-free-ingress.html  08-pipeline.html  09-redis-kafka.html  10-measure-defend.html
capstone/matching/tests/: matching_tests.cpp
capstone/matching/work/: CMakeLists.txt  README.md
capstone/matching/work/include/matching/: edge.hpp  engine.hpp  ingress_queue.hpp  mock_data.hpp  order.hpp  order_book.hpp
capstone/matching/work/src/: edge.cpp  engine.cpp  mock_data.cpp  order_book.cpp
capstone/matching/work/tests/: matching_work_tests.cpp
capstone/reference/apps/: bench_main.cpp  client_main.cpp  packet_main.cpp  server_main.cpp
capstone/reference/include/netforge/: blocking_queue.hpp  client.hpp  packet.hpp  protocol.hpp  server.hpp  store.hpp  thread_pool.hpp  unique_fd.hpp  wal.hpp
capstone/reference/src/: client.cpp  packet.cpp  protocol.cpp  server.cpp  store.cpp  thread_pool.cpp  wal.cpp
capstone/tests/: netforge_tests.cpp
capstone/work/: ARCHITECTURE.md  README.md
capstone/work/apps/: bench_main.cpp  client_main.cpp  packet_main.cpp  server_main.cpp
capstone/work/evidence/: README.md
capstone/work/include/netforge/: blocking_queue.hpp  client.hpp  packet.hpp  protocol.hpp  server.hpp  store.hpp  thread_pool.hpp  unique_fd.hpp  wal.hpp
capstone/work/src/: client.cpp  packet.cpp  protocol.cpp  server.cpp  store.cpp  thread_pool.cpp  wal.cpp
diagnostic/: baseline.cpp  baseline.hpp  tests.cpp
interview/: CODING-DRILLS.md  MOCK-ROUNDS.md  QUESTION-BANK.md  RETRIEVAL-DECK.md  SCORECARD-TEMPLATE.md  SCORECARD.md  STORY-BANK.md
interview/fixtures/: README.md
interview/fixtures/day10/: README.md  asan_uaf.cpp  tsan_race.cpp
interview/fixtures/mock-a/: README.md  mock_a_frame_faults.cpp
interview/fixtures/mock-b/: README.md  mock_b_shutdown_hang.cpp
interview/quantiq-line-reversal/: README.md  run.py  starter.cpp
labs/debugging/: README.md  asan-starter.cpp  run.py  tsan-starter.cpp
labs/parallelism/: README.md  reference.cpp  run.py  starter.cpp
lessons/: 0001-own-the-bytes.html  0002-never-leak-a-descriptor.html  0003-modern-cpp-interfaces.html  0004-make-shared-state-boring.html  0005-threads-with-lifetimes.html  0006-read-the-wire.html  0007-socket-reality.html  0008-scale-the-event-loop.html  0009-cross-process-boundaries.html  0010-debug-under-fire.html  0011-persist-and-recover.html  0012-harden-the-boundary.html  0013-design-and-explain.html  0014-prove-readiness.html
reference/: 0001-cpp-lifetime-ownership.html  0002-concurrency-memory-model.html  0003-posix-io-sockets.html  0004-networking-protocols.html  0005-debugging-performance.html  0006-storage-reliability.html  0007-system-design-interview.html
scripts/: analyze.sh  bench.sh  bootstrap.sh  build-pages.mjs  check-content.mjs  check-matching.sh  check.sh  diagnostic.sh  doctor.sh  record-learning.sh  serve.sh
